--- a/public/css/style.css
+++ b/public/css/style.css
@@ -830,6 +830,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: flex-end;
 }
 .footer__nav li {
   margin-left: 1.5rem;
@@ -1321,4 +1322,10 @@ body {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
+}
+
+/* Leaflet content popup font size */
+.leaflet-popup-content {
+  font-size: 1.5rem;
+  max-width: 300;
 }
