--- a/views/base.pug
+++ b/views/base.pug
@@ -6,7 +6,7 @@ html(lang="en")
             meta(name="viewport", content="width=device-width, initial-scale=1.0")
             link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Lato:300,300i,700")
             link(rel="stylesheet", href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css", integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=", crossorigin="")
-            script(src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js", integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=", crossorigin="")
+            //- script(src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js", integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=", crossorigin="")
 
             link(rel="stylesheet", href="/css/style.css")
             link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
@@ -22,4 +22,4 @@ html(lang="en")
 
     //Footer
     include _footer
-        
+    script(src="/js/bundle.js")
