--- a/views/tour.pug
+++ b/views/tour.pug
@@ -2,7 +2,7 @@ extends base
 include _reviewCard
 
 block append head
-    script(src="/js/mapbox.js", async)
+    //- script(src="/js/mapbox.js", async)
 
 
 mixin overviewBox(label, text, icon)
