--- a/views/base.pug
+++ b/views/base.pug
@@ -10,7 +10,7 @@ html(lang="en")
             link(rel="stylesheet", href="/css/style.css")
             link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
             title Natours | #{title || 'Exciting tours for adventurous people'}
-    body
+    body(data-alert=`${alert? alert : ''}`)
         // HEADER
     include _header
 
